--- a/assessment.html
+++ b/assessment.html
@@ -3,6 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="tweitter:card" content="summary">
+  <meta
+    property="og:url"
+    content="https://marina-works-2023.github.io/assesmment.html"
+   >
+  <meta
+    property="og:description"
+    content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
+   >
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>あなたのいいところ診断</title>
