--- a/assessment.html
+++ b/assessment.html
@@ -8,6 +8,7 @@
     property="og:url"
     content="https://marina-works-2023.github.io/assesmment.html"
    >
+  <meta property="og:title" content="あなたのいいところ診断">
   <meta
     property="og:description"
     content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
