--- a/assessment.html
+++ b/assessment.html
@@ -6,7 +6,7 @@
   <meta name="tweitter:card" content="summary">
   <meta
     property="og:url"
-    content="https://marina-works-2023.github.io/assesmment.html"
+    content="https://marina-works-2023.github.io/assesment.html"
    >
   <meta property="og:title" content="あなたのいいところ診断">
   <meta
