--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="tweitter:card" content="summary">
+  <meta name="twitter:card" content="summary">
   <meta
     property="og:url"
     content="https://marina-works-2023.github.io/assesment.html"
