--- a/assessment.html
+++ b/assessment.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assessment.css">
     <title>あなたのいいところ診断</title>
-        <meta name="twitter:card" content="summary">
+    <meta name="description" content="学校法人角川ドワンゴ学園 N高等学校・S高等学校(通信制高校 広域・単位制)は、ネットと通信制高校の制度を活用した“ネットの高校”です。VR、PCやスマホを使い、自分のペースで勉強を進めながら高校卒業資格を取得できます。ネットでもリアルでも学べる多彩な課外授業も特長です。">
+    
 <meta property="og:url" content="https://marina-works-2023.github.io/assessment/assessment.html">
 <meta property="og:title" content="あなたのいいところ診断">
 <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。">
+ <meta name="twitter:card" content="summary">
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
