--- a/assessment.html
+++ b/assessment.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <html lang="ja" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
+    <meta name="twitter:card" content="summary">
+    <meta
+      property="og:url"
+      content="https://marina-works-2023.github.io/assessment/assessment.html"
+    >
+    <meta property="og:title" content="あなたのいいところ診断">
+    <meta
+      property="og:description"
+      content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
+    >
     <link rel="stylesheet" href="assessment.css">
     <title>あなたのいいところ診断</title>
-<meta name="description" content="学校法人角川ドワンゴ学園 N高等学校・S高等学校(通信制高校 広域・単位制)は、ネットと通信制高校の制度を活用した“ネットの高校”です。VR、PCやスマホを使い、自分のペースで勉強を進めながら高校卒業資格を取得できます。ネットでもリアルでも学べる多彩な課外授業も特長です。">
-<meta property="og:title" content="N高等学校・S高等学校 (通信制高校 広域・単位制)">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://nnn.ed.jp/">
-<meta property="og:image" content="https://nnn.ed.jp/assets/img/logo_ogp.png">
-<meta property="og:site_name" content="N高等学校・S高等学校">
-<meta property="og:description" content="学校法人角川ドワンゴ学園 N高等学校・S高等学校(通信制高校 広域・単位制)は、ネットと通信制高校の制度を活用した“ネットの高校”です。VR、PCやスマホを使い、自分のペースで勉強を進めながら高校卒業資格を取得できます。ネットでもリアルでも学べる多彩な課外授業も特長です。">
-<meta property="og:locale" content="ja_JP">
-<meta name="twitter:card" content="summary">
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
