--- a/assessment.html
+++ b/assessment.html
@@ -10,6 +10,7 @@
     <meta
       property="og:description"
       content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSSの読み込み-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>marina-works-2023が作ったあなたのいいところ診断</title>
