--- a/assessment.html
+++ b/assessment.html
@@ -34,5 +34,11 @@
      <div id="tweet-area" class="mt-3"></div>
     </div>
     <script src="assessment.js"></script>
+    
+    <footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+    <span class="text-muted">Place sticky footer content here.</span>
+  </div>
+</footer>
   </body>
 </html>
