--- a/assessment.html
+++ b/assessment.html
@@ -34,11 +34,12 @@
      <div id="tweet-area" class="mt-3"></div>
     </div>
     <script src="assessment.js"></script>
-    
+     <!-- Bootstrap 固定フッター-->
     <footer class="footer mt-auto py-3 bg-light">
   <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
+    <span class="text-muted">診断してくれてありがとう！また来てね！</span>
   </div>
+      
 </footer>
   </body>
 </html>
