--- a/assessment.html
+++ b/assessment.html
@@ -3,43 +3,38 @@
   <head>
     <meta charset="UTF-8">
     <meta name="twitter:card" content="summary">
-    <meta
-      property="og:url"
-      content="https://marina-works-2023.github.io/assessment/assessment.html">
+    <meta property="og:url"   content="https://marina-works-2023.github.io/assessment/assessment.html">
     <meta property="og:title" content="あなたのいいところ診断">
-    <meta
-      property="og:description"
-      content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:description"content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" >
+    <meta name="viewport"     content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSSの読み込み-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>marina-works-2023が作ったあなたのいいところ診断</title>
   </head>
   <body>
         <header>
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">あなたのいいところ診断</a>
-        </div>
-      </nav>
-    </header>
+         <nav class="navbar navbar-dark bg-dark">
+           <div class="container-fluid">
+             <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+           </div>
+         </nav>
+        </header>
       <div class="container pt-5">
-      <h1>あなたのいいところは?</h1>
-      <p>診断したい名前を入れて下さい</p>
-      <div class="input-group mb-3" style="max-width: 500px;">
-        <input type="text" class="form-control" id="user-name" size="40" maxlength="20" />
-        <button class="input-group-text" id="assessment">診断する</button>
+        <h1>あなたのいいところは?</h1>
+        <p>診断したい名前を入れて下さい</p>
+        <div class="input-group mb-3" style="max-width: 500px;">
+          <input type="text" class="form-control" id="user-name" size="40" maxlength="20" />
+          <button class="input-group-text" id="assessment">診断する</button>
+        </div>
+        <div id="result-area"></div>
+        <div id="tweet-area" class="mt-3"></div>
       </div>
-      <div id="result-area"></div>
-     <div id="tweet-area" class="mt-3"></div>
-    </div>
     <script src="assessment.js"></script>
-     <!-- Bootstrap 固定フッター-->
+    <!-- Bootstrap 固定フッター-->
     <footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
-    <span class="text-muted">診断してくれてありがとう！また来てね！</span>
-  </div>
-      
-</footer>
+      <div class="container">
+        <span class="text-muted">診断してくれてありがとう！また来てね！</span>
+      </div>
+    </footer>
   </body>
 </html>
